src/objects/Skill__c.object
<CustomObject>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <label>Resource</label>
        <referenceTo>Resource__c</referenceTo>
        <relationshipLabel>Skills</relationshipLabel>
        <relationshipName>Skills</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Skill</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Skill Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Skills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Duplicate</fullName>
        <active>true</active>
        <errorConditionFormula>Name = VLOOKUP( $ObjectType.Skill__c.Fields.Name , $ObjectType.Skill__c.Fields.Name , Name ) &amp;&amp; Id &lt;&gt; VLOOKUP( $ObjectType.Skill__c.Fields.Id , $ObjectType.Skill__c.Fields.Name , Name )</errorConditionFormula>
        <errorMessage>Duplicate</errorMessage>
    </validationRules>
</CustomObject>